# rag-for-begginers

./: .env-template  .gitignore  README.md  pyproject.toml
src/app/: util.py
src/app/chunking/: __init__.py  character_text_splitter.py  recursive_character_text_splitter.py
src/app/loaders/: __init__.py  text_loader.py
src/app/ollama/: embedding.py  rag.py
src/app/open_ai/: embedding.py  rag.py
src/app/utils/: __init__.py  chat_util.py  logging_util.py
